# tracking-app

./: .gitignore  APP_LOGIC.md  ARCHITECTURE.md  CODEX_DEBUG.md  DATABASE.md  DESIGN_SYSTEM.md  DESKTOP_WIDGET.md  ROADMAP.md  SPEC.md  package-lock.json  package.json  proxy.ts
.claude/: settings.local.json
app/: globals.css  layout.tsx  page.tsx
app/admin/: layout.tsx
components/admin/: ClientsClient.tsx  NewProjectForm.tsx  ProjectCleanupActions.tsx  ProjectDetailClient.tsx  RoundSelector.tsx  TimelineFilters.tsx
components/ui/: AdminNavLink.tsx  Badge.tsx  Button.tsx  ProgressBar.tsx  ViewSwitcher.tsx
components/widget/: WidgetClient.tsx
lib/actions/: auth.ts  clients.ts  delivery.ts  projects.ts  stages.ts
lib/supabase/: client.ts  server.ts
lib/types/: app.ts  database.ts
lib/utils/: dates.ts  ensure-profile.ts  formatting.ts  progress.ts  revalidate.ts  rounds.ts
scripts/: generate-placeholder-icon.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
supabase/: seed.sql
supabase/migrations/: 001_initial_schema.sql  002_rls.sql  003_profile_self_insert.sql  004_production_statuses.sql  005_auth_trigger.sql  006_clients.sql  007_backfill_production_statuses.sql  008_ensure_client_columns.sql  009_simplified_statuses.sql  010_backfill_simplified_statuses.sql  011_team_workflow_repair_policies.sql  012_drop_public_eta_columns.sql  013_repair_multiple_active_rounds.sql  014_status_before_block.sql  015_rpc_functions.sql  017_integrity_rpc.sql  (+5 more)
(+10 files in other folders)
